--- a/templates/pairs.html
+++ b/templates/pairs.html
@@ -3,95 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Buy/Sell Pairs for {{ usym }}</title>
-    <style>
-        pairs {
-            border-collapse: collapse;
-            margin-top: 20px;
-            width: auto;
-        }
-        #pairs th, #pairs td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        body {
-            margin: 0;
-            padding: 0;
-        }
-        .data {
-            border-collapse: collapse;
-            width: 100%;
-        }
-        .data th, .data td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: left;
-        }
-        .data th {
-            background-color: #f2f2f2;
-        }
-        .input-container {
-            margin-bottom: 10px; /* Space between input fields */
-        }
-        .pts_over {
-            line-height: 10px;
-            display: flex;
-        }
-        label {
-            margin-right: 10px; /* Space between label and input */
-            font-weight: bold; /* Make the label bold */
-        }
-        body {
-            background-color: #121212; /* Dark background color */
-            color: #E0E0E0; /* Light text color for contrast */
-            font-family: 'Trebuchet MS', sans-serif; /* Font style */
-            margin: 0;
-            padding: 20px;
-        }
-        h1, h2, h3 {
-            color: #FFFFFF; /* White color for headings */
-        }
-        #overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 1000; /* Ensure it appears above other content */
-        }
-        .overlay-content {
-            color: white;
-            text-align: center;
-            background: rgba(0, 0, 0, 0.7); /* Darker background for the text */
-            padding: 20px;
-            border-radius: 10px;
-        }
-        .top-right {
-            position: fixed;
-            z-index: 1000;
-            top: 10px; /* Adjust as needed */
-            right: 10px; /* Adjust as needed */
-            color: #000000;
-            background-color: rgba(255, 255, 255, 0.8); /* Optional: background for better visibility */
-            padding: 5px; /* Optional: padding for aesthetics */
-            border-radius: 5px; /* Optional: rounded corners */
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Optional: shadow for depth */
-        }
-    </style>
+    <link rel="stylesheet" href="../static/CSS/pairs.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.0/socket.io.js"></script>
+    <script src="{{ url_for('static', filename='JavaScript/timeStamp.js') }}"></script>
 </head>
 <body>
     <h2>Consolidated Data for {{ usym }} </h2>
     <table id="pairs">
         <thead>
-            <tr>
+            <tr id="pairsHeader">
                 <th>C</th>
                 <th>C$</th>
                 <th>C$/DDiff</th>
+                <th>CAvg</th>
+                <th>Sell Bid #</th>
+                <th>Sell Bid</th>
+                <th>Sell Ask</th>
+                <th>Sell Ask #</th>
+                <th>Buy Bid #</th>
+                <th>Buy Bid</th>
+                <th>Buy Ask</th>
+                <th>Buy Ask #</th>
                 <th>Short Leg IceChat</th>
                 <th>Long Leg IceChat</th>
                 <th>Sell-K DTE</th>
@@ -106,42 +38,111 @@
     </table>
     <div class="top-right" id="timestamp"></div>
     <script type="module">
-        import getCurrentTimeStamp from './static/JavaScript/timeStamp.js';
-        const body = document.getElementById("pairs-body");
-        const colOrder = [
+        const selectedTimezone = localStorage.getItem('selectedTimezone') || 'Asia/Tokyo'; // Default to Tokyo if not set
+        const fixedHeaders = [
             "C",
             "C$",
             "C$/DDiff",
+            "CAvg",
+            "Sell Bid #",
+            "Sell Bid",
+            "Sell Ask",
+            "Sell Ask #",
+            "Buy Bid #",
+            "Buy Bid",
+            "Buy Ask",
+            "Buy Ask #",
             "Short Leg IceChat",
             "Long Leg IceChat",
             "Sell-K DTE",
             "D-Diff",
             "Sell-K %UL",
-            "Strike Diff"
-        ];
-        let currentDate = getCurrentTimeStamp("Asia/Tokyo", new Date());
+            "Strike Diff",
+        ]
+        const body = document.getElementById("pairs-body");
+        const table = document.getElementById("pairs");
+        const headerRows = document.getElementById('pairsHeader');
+        const headerTags = table.getElementsByTagName('th');
+        let currentHeaders = [...headerTags].map( (th) => {
+            return th.textContent;
+        });
+        let currentDate = getCurrentTimeStamp(selectedTimezone, new Date());
+        let removedColumns = []; // To keep track of removed columns and their indices
+        let pxCols = ["Buy Bid", "Sell Bid", "Buy Ask", "Sell Ask"];
 
-        function createTsDiv(document, date){
-            let timeStampDiv = document.createElement('div');
-            timeStampDiv.className = 'top-right';
-            timeStampDiv.id = 'timestamp';
-            timeStampDiv.innerText = `Last Refreshed: ${date}`;
-            return timeStampDiv;
+        function removeColumn(colNameToRemove){
+            let colIndex = currentHeaders.indexOf(colNameToRemove);
+            if (colIndex > -1){
+                console.log(`Removing Column: ${colNameToRemove}`);
+                removedColumns.push({ name: colNameToRemove, index: colIndex });
+                currentHeaders.splice(colIndex, 1); // get rid of the element in array
+                headerTags[colIndex].parentNode.removeChild(headerTags[colIndex]);
+            }
+        }
+        function addColumn(colNameToAdd){
+            let colIndex = currentHeaders.indexOf(colNameToAdd);
+            // first check what's the order of the real column
+            // then check out of the 4 bid/ask #, how many are there
+            if (colIndex < 0){
+                console.log(`Adding Column: ${colNameToAdd}`);
+                let sizeCols = fixedHeaders.filter( (header) => {
+                    return header.indexOf("#") > -1
+                });
+                
+                let originalIndex = removedColumns.find((col) => {
+                    return col.name === colNameToAdd;
+                });
+                if (originalIndex){
+                    currentHeaders.splice(originalIndex.index, 0, colNameToAdd);
+                    const newHeaderCell = document.createElement('th');
+                    newHeaderCell.textContent = colNameToAdd;
+                    console.log(`Index: ${originalIndex.index}`);
+                    headerRows.insertBefore(newHeaderCell, headerRows.children[originalIndex.index] || null);
+                    removedColumns = removedColumns.filter(col => col.name !== colNameToAdd);
+                }
+            }
+        }
+        function modifyColumns(event){
+            if (!event.data.showShortBidSize){
+                removeColumn("Sell Bid #");
+            }else{
+                addColumn("Sell Bid #");
+            };
+            if (!event.data.showShortAskSize){
+                removeColumn("Sell Ask #");
+            }else{
+                addColumn("Sell Ask #");
+            };            
+            if (!event.data.showLongBidSize){
+                removeColumn("Buy Bid #");
+            }else{
+                addColumn("Buy Bid #");
+            };            
+            if (!event.data.showLongAskSize){
+                removeColumn("Buy Ask #");
+            }else{
+                addColumn("Buy Ask #");
+            };
         }
 
         window.addEventListener('message', (event) => {
             if ('innerHTML' in body){
                 body.innerHTML = "";
             }
-            const pairsData = event.data;
+            modifyColumns(event);
+            const pairsData = event.data.inputData;
             pairsData.sort( (a, b) => {
                 return parseFloat(b["C$"])- parseFloat(a["C$"]);
             })
             pairsData.forEach((pair) => {
                 const tr = document.createElement('tr');
-                colOrder.forEach( (col) => {
+                currentHeaders.forEach( (col) => {
                     const td = document.createElement('td');
                     if (col in pair){
+                        if (pxCols.indexOf(col) > -1){
+                            let index = currentHeaders.indexOf(col);
+                            td.classList.add("grey-shade");
+                        }
                         td.innerText = pair[col];
                     }else{
                         td.innerText = '';
@@ -151,7 +152,7 @@
                 body.appendChild(tr);
             });
             let ts = document.getElementById('timestamp');
-            currentDate = getCurrentTimeStamp("Asia/Tokyo", new Date());
+            currentDate = getCurrentTimeStamp(selectedTimezone, new Date());
             if (!ts){
                 ts = createTsDiv(document, currentDate);
             }else{
