--- a/templates/pairs.html
+++ b/templates/pairs.html
@@ -2,17 +2,98 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Buy/Sell Pairs for {{ usym }}</title>
+    <title>Buy/Sell Pairs for {{ usym }}, Expiry Combo: {{ expiry_combo }}</title>
     <link rel="stylesheet" href="../static/CSS/pairs.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.0/socket.io.js"></script>
     <script src="{{ url_for('static', filename='JavaScript/timeStamp.js') }}"></script>
+    <style>
+        #put-spread-table, #pairs {
+            border-collapse: collapse;
+            margin-top: 20px;
+            width: auto;
+        }
+        #put-spread-table th, #put-spread-table td, #pairs th, #pairs td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: left;
+        }
+        .grey-shade {
+            background-color: lightgrey;
+        }
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        .data {
+            border-collapse: collapse;
+            width: 100%;
+        }
+        .data th, .data td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: left;
+        }
+        .data th {
+            background-color: #f2f2f2;
+        }
+        .input-container {
+            margin-bottom: 10px; /* Space between input fields */
+        }
+        .pts_over {
+            line-height: 10px;
+            display: flex;
+        }
+        label {
+            margin-right: 10px; /* Space between label and input */
+            font-weight: bold; /* Make the label bold */
+        }
+        body {
+            background-color: #87CEFA; /* Light Sky Blue background color */
+            color: #121212;
+            font-family: 'Trebuchet MS', sans-serif; /* Font style */
+            margin: 0;
+            padding: 20px;
+        }
+        h1, h2, h3 {
+            color: #121212; /* White color for headings */
+        }
+        #overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000; /* Ensure it appears above other content */
+        }
+        .overlay-content {
+            color: white;
+            text-align: center;
+            background: rgba(0, 0, 0, 0.7); /* Darker background for the text */
+            padding: 20px;
+            border-radius: 10px;
+        }
+        .top-right {
+            position: fixed;
+            z-index: 1000;
+            top: 10px; /* Adjust as needed */
+            right: 10px; /* Adjust as needed */
+            color: #000000;
+            background-color: rgba(255, 255, 255, 0.8); /* Optional: background for better visibility */
+            padding: 5px; /* Optional: padding for aesthetics */
+            border-radius: 5px; /* Optional: rounded corners */
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Optional: shadow for depth */
+        }
+    </style>
 </head>
 <body>
-    <h2>Consolidated Data for {{ usym }} </h2>
+    <h2>Consolidated Data for {{ usym }}, Expiry Combo: {{ expiry_combo }} </h2>
     <table id="pairs">
         <thead>
             <tr id="pairsHeader">
-                <th>C</th>
                 <th>C$</th>
                 <th>C$/DDiff</th>
                 <th>CAvg</th>
@@ -38,9 +119,8 @@
     </table>
     <div class="top-right" id="timestamp"></div>
     <script type="module">
-        const selectedTimezone = localStorage.getItem('selectedTimezone') || 'Asia/Tokyo'; // Default to Tokyo if not set
+        const selectedTimezone = localStorage.getItem('selectedTimezone') || 'America/New_York'; // Default to Tokyo if not set
         const fixedHeaders = [
-            "C",
             "C$",
             "C$/DDiff",
             "CAvg",
