--- a/static/CSS/sre.css
+++ b/static/CSS/sre.css
@@ -1,6 +1,7 @@
 table {
     border-collapse: collapse;
     width: auto;
+    min-width: 600px;
 }
 .table-container {
     display: flex; /* Use flexbox to align tables side by side */
@@ -22,6 +23,16 @@ body {
     margin: 0;
     padding: 20px;
 }
+button {
+    margin: 10px 0; /* Spacing for the button */
+    padding: 10px 15px; /* Button padding */
+    background-color: #4CAF50; /* Green background */
+    color: white; /* White text */
+    border: none; /* No borders */
+    cursor: pointer; /* Pointer cursor */
+    display: inline;
+    margin-left: 10px;
+}
 p {
     line-height: 1.6; /* Improved readability */
 }
@@ -35,6 +46,11 @@ body::before {
     background: url('https://www.transparenttextures.com/patterns/asfalt-dark.png'); /* Example texture */
     opacity: 0.1; /* Lighten the texture */
     z-index: -1; /* Send it to the back */
+}
+#section_positions {
+    overflow-y: auto; /* Enable vertical scrolling */
+    overflow-x: auto; /* Enable horizontal scrolling when needed */
+    max-height: 300px; /* Set your desired max height */
 }
 #overlay {
     position: fixed;
